# sierpinski-triangle

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
src/: bitmap.cpp  bitmap.h  imagesaver.cpp  imagesaver.h  main.cpp  vector.h
